# deep_belief_nets

./: .gitignore  README  config.h.in  configure.ac
src/: Makefile.am  connection.cc  connection.h  dataset.h  device.cc  device.h  layer.cc  layer.h  main.cc  mnist_dataset.cc  mnist_dataset.h  mnist_world.cc  mnist_world.h  monitor.cc  monitor.h  network.cc  network.h  schedule.cc  schedule.h  test_schedule.cc  test_schedule.h  training_schedule.cc  training_schedule.h  world.h
